28-3-2025 new 15 calculators added

--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -806,6 +806,8 @@
             <a href="heatstressindex.html" class="calculator-btn">Heat Stress Index (HSI) Calculator</a>
             <a href="healthyweightcalcualtor.html" class="calculator-btn">Healthy Weight Calculator</a>
             <a href="heavinessofsmokingindex.html" class="calculator-btn">Heaviness of Smoking Index (HSI) Calculator</a>
+            <a href="handarmcalculator.html" class="calculator-btn">Hand-Arm Vibration Exposure (HAV) Calculator-A(8) Value</a> 
+
 
             <a href="idealweightcalcualtor.html" class="calculator-btn">Ideal Weight Calculator</a>
             <a href="karvonenformulacalculator.html" class="calculator-btn">Karvonen Formula Calculator</a>
@@ -823,6 +825,8 @@
             <a href="proteinintakecalcualtor.html" class="calculator-btn">Protein Intake Calculator</a>
             <a href="ponderalindexcal.html" class="calculator-btn">Ponderal Index (PI) Calculator</a>
             <a href="rfmcalcualtor.html" class="calculator-btn">Relative Fat Mass (RFM) Calculator</a>
+            <a href="rapidentirebodyassessment.html" class="calculator-btn">Rapid Entire Body Assessment (REBA) Calculator</a>
+
 
             <a href="sleepcalculator.html" class="calculator-btn">Sleep Calculator</a>
 
