29-3-2025 today new 15 calcualtors added

--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -790,6 +790,8 @@
             <a href="flammabilityforgasmixtures.html" class="calculator-btn">Flammability Calculator for Gas Mixtures</a>
             <a href="fauskesventarea.html" class="calculator-btn">Fauske's Vent Area Calculator</a>
             <a href="firefightingdemandcal.html" class="calculator-btn">Fire Fighting Demand Calculator</a>
+            <a href="firehazard.html" class="calculator-btn">Fire Hazard Risk Calculation (Fire Load Density)</a>
+
 
 
 
@@ -838,7 +840,6 @@
             
 
 
-            <!-- <a href="firehazard.html" class="calculator-btn">Fire Hazard Risk Calculation (Fire Load Density)</a> -->
 
         </div>
     </section>
