01-4-2025 today new 15 calculators completed

--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -785,6 +785,8 @@
 
             <a href="directionalsurvey.html" class="calculator-btn">Directional Survey Calculator</a>
             <a href="dispersioncalculator.html" class="calculator-btn">Dispersion Calculator</a>
+            <a href="dilusionventilationrate.html" class="calculator-btn">Dilution Ventilation Rate for Contaminant Control Calculator</a> 
+
 
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
 
@@ -837,7 +839,6 @@
 
 
 
-            <!-- <a href="dilusionventilationrate.html" class="calculator-btn">Dilution Ventilation Rate for Contaminant Control Calculator</a> -->
 
             
          
