--- a/pipesizingcalculator.html
+++ b/pipesizingcalculator.html
@@ -234,7 +234,9 @@ select {
         <li><strong>Velocity (V):</strong> The recommended speed of the agent inside the pipe (m/s).</li>
         <li><strong>Agent Type:</strong> The suppression agent used, which affects density and flow calculations.</li>
     </ul>
+    <p>This formula calculates the pipe diameter based on mass flow rate and fluid density. It is specifically useful when dealing with agents like FM-200 and NOVEC 1230, where density affects volumetric flow. By converting mass flow rate into volumetric flow, it ensures accurate pipe sizing for proper system performance.
 
+        Commonly used in fire suppression and specialized fluid systems, this method helps maintain the correct discharge rate and pressure. The final diameter is given in centimeters, making it practical for real-world installation and component selection.</p>
     <h3>What does the result mean?</h3>
     <p>
         The result provides the <strong>minimum pipe diameter required</strong> to handle the suppression agent efficiently without exceeding pressure limits.
