--- a/totalheightofsoakpitcalculator.html
+++ b/totalheightofsoakpitcalculator.html
@@ -293,7 +293,7 @@ tr:hover {
         <label for="height2">Height of Soak Pit Based on Volume (H₂ in meters):</label>
         <input type="number" id="height2" placeholder="Enter H₂" step="0.01">
     </div>
-    <button class="cal-btn" onclick="calculateTotalHeight()">Calculate Total Height</button>
+    <button class="cal-btn" onclick="calculateTotalHeight()">Calculate Total Height of Soak Pit Total Height of Soak Pit Calculator</button>
     <div class="result" id="result"></div>
 </div>
 
