--- a/bmicalculator.html
+++ b/bmicalculator.html
@@ -145,7 +145,7 @@
 }
 
 .note-container h3 {
-    margin-top: 0;
+    margin:15px 0;
     color: #007bff;
     font-size: 18px;
 }
@@ -401,12 +401,12 @@ select {
 
     <p>Since BMI prime is a ratio of two BMI values, BMI prime is a dimensionless value. A person who has a BMI prime less than 0.74 is classified as underweight; from 0.74 to 1 is classified as normal; greater than 1 is classified as overweight; and greater than 1.2 is classified as obese. The table below shows a person's weight classification based on their BMI prime:</p>
 
-    <table border="1" cellpadding="10">
+    <table border="1" cellpadding="10" class="bmi-table">
         <thead>
             <tr>
-                <th>Classification</th>
-                <th>BMI</th>
-                <th>BMI Prime</th>
+                <th class="bmi-header">Classification</th>
+                <th class="bmi-header">BMI</th>
+                <th class="bmi-header">BMI Prime</th>
             </tr>
         </thead>
         <tbody>
