3-4-2025 new 15 calculators added

--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -769,6 +769,9 @@
 
 
             <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
+            <a href="bmiforkids.html" class="calculator-btn">BMI Calculator for Kids</a>
+
+
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
             <a href="bricalcualtor.html" class="calculator-btn">Body Roundness Index (BRI) Calculator</a>
 
