--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -786,6 +786,8 @@
             <a href="directionalsurvey.html" class="calculator-btn">Directional Survey Calculator</a>
             <a href="dispersioncalculator.html" class="calculator-btn">Dispersion Calculator</a>
             <a href="dilusionventilationrate.html" class="calculator-btn">Dilution Ventilation Rate for Contaminant Control Calculator</a> 
+            <a href="dftcalculator.html" class="calculator-btn">Dry Film Thickness (DFT) Calculator</a>
+
 
 
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
@@ -836,6 +838,10 @@
             <a href="trainingeffiencycalculator.html" class="calculator-btn">Training Efficiency Calculator</a>
 
             <a href="vortexsheddingfrequency.html" class="calculator-btn">Vortex Shedding Frequency Calculator</a>
+            <a href="volumesolidcalculator.html" class="calculator-btn">Volume Solids (VS) Calculator</a>
+
+            <a href="wftcalculator.html" class="calculator-btn">Wet Film Thickness (WFT) Calculator</a>
+
 
 
 
