--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -1075,7 +1075,7 @@
 <a href="subcriticalflowventareacalculator.html" class="calculator-btn">Subcritical Flow Vent Area Calculator (API RP 520)</a>
                  
 <a href="steamsizingcalculator.html" class="calculator-btn">Steam Sizing Calculator</a>
-<!-- <a href="safetystockcalculator.html" class="calculator-btn">Safety Stock Calculator</a> -->
+ <a href="safetystockcalculator.html" class="calculator-btn">Safety Stock Calculator</a> 
 
 
 
