4-4-2025 today new calculators added and link added in home  page and desclaimer also added

--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -816,6 +816,10 @@
 
             <a href="idealweightcalcualtor.html" class="calculator-btn">Ideal Weight Calculator</a>
             <a href="karvonenformulacalculator.html" class="calculator-btn">Karvonen Formula Calculator</a>
+            <a href="kidneyriskcalcualtor.html" class="calculator-btn">Kidney Failure Risk Calculator</a>
+            <a href="kidneystonecalculator.html" class="calculator-btn">Kidney STONE Calculator for Percutaneous Nephrolithotomy</a>
+
+
             <a href="leanbodymass.html" class="calculator-btn">Lean Body Mass (LBM) Calculator</a>
             <a href="lillescorecalculator.html" class="calculator-btn">Lille Score Calculator for Alcoholic Hepatitis</a>
 
