--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -835,10 +835,14 @@
 
 
             <a href="turndownratioofasteamflowmeter.html" class="calculator-btn">Turndown Ratio Of A Steam Flowmeter Calculator</a>
-            <a href="trainingeffiencycalculator.html" class="calculator-btn">Training Efficiency Calculator</a>
+            <a href="trainingeffiencycalculator.html" class="calculator-btn">Training Efficiency Calculator</a
+            <a href="twopackdensity.html" class="calculator-btn">Two-Pack Mix Density Calculator</a>
+                
 
             <a href="vortexsheddingfrequency.html" class="calculator-btn">Vortex Shedding Frequency Calculator</a>
             <a href="volumesolidcalculator.html" class="calculator-btn">Volume Solids (VS) Calculator</a>
+            <a href="volumeofpaintrequired.html" class="calculator-btn">Volume of Paint Required Calculator</a>
+
 
             <a href="wftcalculator.html" class="calculator-btn">Wet Film Thickness (WFT) Calculator</a>
 
