--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -433,7 +433,217 @@
     }
 }
 
+.qehs-disclaimer-section {
+  background: #f8f9fa;
+  padding: 40px 20px;
+  display: flex;
+  justify-content: center;
+}
 
+.qehs-disclaimer-box {
+  max-width: 1200px;
+  background: #ffffff;
+  border: 2px dotted #1560bd;
+  padding: 30px 40px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.qehs-disclaimer-title {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #0056b3;
+  margin-bottom: 15px;
+}
+
+.qehs-disclaimer-subtitle {
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #1560bd;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+
+.qehs-disclaimer-text {
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.6;
+  text-align: justify;
+}
+
+.qehs-disclaimer-points {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.qehs-disclaimer-points li {
+  padding: 12px 30px 12px 40px;
+  margin-bottom: 15px;
+  background-color: #dcf1f8;
+  border-radius: 10px;
+  position: relative;
+  font-size: 0.97rem;
+  line-height: 1.5;
+  color: #333;
+  transition: background-color 0.3s ease;
+  text-align: justify;
+}
+
+.qehs-disclaimer-points li::before {
+  content: "✔";
+  position: absolute;
+  left: 15px;
+  top: 14px;
+  color: #007bff;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+strong{
+   color: #1560bd;
+}
+@media (max-width: 576px) {
+  .qehs-disclaimer-section {
+    padding: 20px 10px;
+  }
+
+  .qehs-disclaimer-box {
+    padding: 20px;
+  }
+
+  .qehs-disclaimer-title {
+    font-size: 1.5rem;
+  }
+
+  .qehs-disclaimer-subtitle {
+    font-size: 1.1rem;
+  }
+
+  .qehs-disclaimer-text,
+  .qehs-disclaimer-points li {
+    font-size: 0.95rem;
+  }
+
+  .qehs-disclaimer-points li {
+    padding: 10px 20px 10px 35px;
+  }
+
+  .qehs-disclaimer-points li::before {
+    left: 10px;
+    top: 10px;
+    font-size: 1rem;
+  }
+}
+.report-section {
+  padding: 60px 20px;
+  background: linear-gradient(to right, #e3f2fd, #e4effc);
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.report-wrapper {
+  max-width: 1100px;
+  margin: auto;
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+  display: flex;
+  gap: 30px;
+  padding: 40px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.report-content {
+  flex: 1 1 400px;
+}
+
+.report-title {
+  font-size: 28px;
+  color: #1a237e;
+  margin-bottom: 20px;
+}
+
+.report-text {
+  font-size: 16px;
+  color: #444;
+  line-height: 1.6;
+  margin-bottom: 30px;
+}
+
+.report-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.report-item {
+  font-size: 18px;
+  color: #1a237e;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.report-item a {
+  color: #1a237e;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.report-item a:hover {
+  text-decoration: underline;
+}
+
+.report-icon {
+  font-size: 22px;
+}
+
+.report-image {
+  flex: 1 1 300px;
+  text-align: center;
+}
+
+.report-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+  animation: floatImage 3s ease-in-out infinite;
+}
+
+@keyframes floatImage {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
+  100% { transform: translateY(0); }
+}
+
+
+@media (max-width: 768px) {
+ 
+
+  .report-title {
+    font-size: 22px;
+    text-align: center;
+  }
+
+  .report-text {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .report-contact {
+    align-items: center;
+  }
+
+  .report-item {
+    font-size: 15px;
+    justify-content: center;
+    text-align: center;
+ 
+
+ 
+  }
+}
 
 </style>
 	</head>
@@ -800,7 +1010,56 @@
     </section>
 </div>
 
-
+<section class="qehs-disclaimer-section">
+    <div class="qehs-disclaimer-box">
+      <h2 class="qehs-disclaimer-title">Disclaimer</h2>
+      <p class="qehs-disclaimer-text">
+        The information provided on this website, including the tools, calculators, and resources, is for informational and educational purposes only. While we strive to ensure the accuracy and reliability of the data and calculations, <strong>QEHS and Fire Calculators</strong> makes no guarantees, express or implied, about the completeness, accuracy, or suitability of the results for specific purposes.
+      </p>
+  
+      <h3 class="qehs-disclaimer-subtitle"><strong>Important Points to Note:</strong></h3>
+      <ul class="qehs-disclaimer-points">
+        <li>
+          <strong>Professional Guidance Required:</strong> Always consult a qualified <strong>QEHS and Fire</strong> professional to verify and interpret results for compliance with local, national, and industry-specific safety standards.
+        </li>
+        <li>
+          <strong>Assumptions and Limitations:</strong> The calculators are based on general safety assumptions and may not account for all variables in real-world scenarios.
+        </li>
+        <li>
+          <strong>No Liability:</strong> <strong>QEHS and Fire Calculators</strong> and its affiliates shall not be held liable for any loss, injury, or damages arising from the use of or reliance on the tools or information provided on this website.
+        </li>
+        <li>
+          <strong>User Responsibility:</strong> Users are solely responsible for determining the applicability of the results and ensuring compliance with applicable laws, regulations, and best practices.
+        </li>
+      </ul>
+    </div>
+  </section>
+  
+  <section class="report-section">
+    <div class="report-wrapper">
+      <div class="report-content">
+        <h2 class="report-title">📢 Report Error / Suggest Calculators</h2>
+        <p class="report-text">
+          Found a bug or have a brilliant idea for a new calculator? We’re all ears! Let us know and help us improve your experience.
+        </p>
+        <div class="report-contact">
+          <div class="report-item">
+            <span class="report-icon">📧</span>
+            <a href="mailto:contactmlconsultancy@gmail.com">contactmlconsultancy@gmail.com</a>
+          </div>
+          <div class="report-item">
+            <span class="report-icon">📞</span>
+            <span>+91-99498 45759</span>
+          </div>
+        </div>
+      </div>
+      <div class="report-image">
+        <img src="images/vindus_clients_images/error.png" alt="Report Illustration">
+      </div>
+    </div>
+  </section>
+  
+  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
 
