--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -866,6 +866,8 @@
 <a href="heatgainfromventilation.html" class="calculator-btn">Heat Gain from Ventilation Calculator</a>
 <a href="heightcalculationfordrainpipeslope.html" class="calculator-btn">Height Calculation for Drain Pipe Slope</a>
 <a href="heightcalculationfordrainpipeslope.html" class="calculator-btn">Height of Soak Pit Based on Volume Calculator</a>
+<a href="horizontalsettlingvelocity.html" class="calculator-btn">Horizontal Settling Velocity (vh) Calculator</a>
+
 
 
 
@@ -945,6 +947,8 @@
 <a href="osmoticpressure.html" class="calculator-btn">Reverse Osmosis (Osmotic Pressure Calculator)</a>
 <a href="requiredventilationrate.html" class="calculator-btn">Required Ventilation Rate Calculator For Indoor Air Quality</a>
 <a href="reynoldsnumbercalculator.html" class="calculator-btn">Reynolds Flow Predictor Calculator</a>
+<a href="retentiontime.html" class="calculator-btn">Retention Time in Settling Zone (t) Calculator</a>
+
 
 
 
@@ -996,6 +1000,8 @@
 <a href="settlingreynoldsnumber.html" class="calculator-btn">Settling Reynolds Number Calculator</a>
 <a href="soakpitvolumecalculator.html" class="calculator-btn">Soak Pit Volume Calculator</a>
 <a href="srt.html" class="calculator-btn">Sludge Retention Time (SRT) And Specific Substrate Utilization Rate Calculator</a>
+<a href="overflowrate.html" class="calculator-btn">Settling Overflow Rate (q₀) Calculator</a>
+
 
 
 
@@ -1019,6 +1025,9 @@
   
 
  <a href="thresholdlimitvalueforsilicadust.html" class="calculator-btn">Threshold Limit Value (TLV) Calculator for Silica Dust</a>
+ <a href="timetosettle.html" class="calculator-btn">Time to Settle (t₀) Calculator</a>
+
+
 
    
 
@@ -1030,6 +1039,10 @@
             <a href="todeterminevolumetricflowrate.html" class="calculator-btn">Volumetric Flow Rate Calculator</a>
             <a href="volumetricflowratefromthesheddingfrequency.html" class="calculator-btn">Volumetric Flowrate From The Shedding Frequency Calculator</a>
             <a href="volumetricflowthroughanequalpercentagevalve.html" class="calculator-btn">Volumetric Flow Through An Equal Percentage valve Calculator</a>
+            <a href="veganfootprintcalculator.html" class="calculator-btn">Vegan Footprint Calculator</a>
+            <a href="verticalsettlingvelocity.html" class="calculator-btn">Vertical Settling Velocity (vt) Calculator</a>
+
+
 
 
             
@@ -1064,7 +1077,10 @@
 
 
 
-  
+
+
+
+
  
 
 
