--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </h2>
                                                 <p class="subtitle-element p-xl"> </p>
                                                 <div class="d-flex btn-trait-group flex-wrap justify-content-center gap-2 mb-2 " style="padding-bottom: 8px;">
-                                                    <a href="calculatorqehs.html" class="btn r-04 btn--theme hover--tra-white">Explore 500+ QEHS And Fire Calculators</a>
+                                                    <a href="calculatorqehs.html" class="btn r-04 btn--theme hover--tra-white"><i class="fas fa-calculator"></i>&nbsp &nbsp
+Explore 500+ QEHS And Fire Calculators</a>
                                                 </div>
                                                 <p></p>
                                             </div>
