changes in calculator main page

--- a/calculatorqehs.html
+++ b/calculatorqehs.html
@@ -1014,26 +1014,27 @@ strong{
     <div class="qehs-disclaimer-box">
       <h2 class="qehs-disclaimer-title">Disclaimer</h2>
       <p class="qehs-disclaimer-text">
-        The information provided on this website, including the tools, calculators, and resources, is for informational and educational purposes only. While we strive to ensure the accuracy and reliability of the data and calculations, <strong>QEHS and Fire Calculators</strong> makes no guarantees, express or implied, about the completeness, accuracy, or suitability of the results for specific purposes.
+        The content, including tools, calculators, and other resources available on this site, is intended solely for general information and educational use. While every effort has been made to ensure the data and outputs are as accurate and reliable as possible, <strong>QEHS and Fire Calculators</strong> does not guarantee the precision, completeness, or suitability of any results for specific applications or requirements.
       </p>
   
-      <h3 class="qehs-disclaimer-subtitle"><strong>Important Points to Note:</strong></h3>
+      <h3 class="qehs-disclaimer-subtitle"><strong>Key Considerations:</strong></h3>
       <ul class="qehs-disclaimer-points">
         <li>
-          <strong>Professional Guidance Required:</strong> Always consult a qualified <strong>QEHS and Fire</strong> professional to verify and interpret results for compliance with local, national, and industry-specific safety standards.
+          <strong>Seek Expert Advice:</strong> It is essential to consult a certified <strong>QEHS and Fire</strong> professional to interpret results and confirm adherence to relevant safety regulations and standards.
         </li>
         <li>
-          <strong>Assumptions and Limitations:</strong> The calculators are based on general safety assumptions and may not account for all variables in real-world scenarios.
+          <strong>Scope and Constraints:</strong> These calculators are designed based on standard safety assumptions and may not fully reflect every real-life scenario or specific condition.
         </li>
         <li>
-          <strong>No Liability:</strong> <strong>QEHS and Fire Calculators</strong> and its affiliates shall not be held liable for any loss, injury, or damages arising from the use of or reliance on the tools or information provided on this website.
+          <strong>Disclaimer of Responsibility:</strong> <strong>QEHS and Fire Calculators</strong> and its partners disclaim any liability for damages, losses, or harm that may result from the use or reliance on the information and tools provided on this platform.
         </li>
         <li>
-          <strong>User Responsibility:</strong> Users are solely responsible for determining the applicability of the results and ensuring compliance with applicable laws, regulations, and best practices.
+          <strong>User Obligation:</strong> Users are responsible for determining how the information applies to their needs and ensuring full compliance with applicable laws, standards, and best practices.
         </li>
       </ul>
     </div>
   </section>
+  
   
   <section class="report-section">
     <div class="report-wrapper">
@@ -1045,11 +1046,18 @@ strong{
         <div class="report-contact">
           <div class="report-item">
             <span class="report-icon">📧</span>
-            <a href="mailto:contactmlconsultancy@gmail.com">contactmlconsultancy@gmail.com</a>
+            <a href="mailto:info@mlcqehs.com"> info@mlcqehs.com</a>
           </div>
           <div class="report-item">
             <span class="report-icon">📞</span>
             <span>+91-99498 45759</span>
+
+          </div>
+          <div class="report-item">
+            <span class="report-icon">📞</span>
+           
+            <span>+91-77269 32023</span>
+
           </div>
         </div>
       </div>
