quality tag removed

--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -835,7 +835,7 @@
 
 
             <a href="turndownratioofasteamflowmeter.html" class="calculator-btn">Turndown Ratio Of A Steam Flowmeter Calculator</a>
-            <a href="trainingeffiencycalculator.html" class="calculator-btn">Training Efficiency Calculator</a
+            <a href="trainingeffiencycalculator.html" class="calculator-btn">Training Efficiency Calculator</a>
             <a href="twopackdensity.html" class="calculator-btn">Two-Pack Mix Density Calculator</a>
                 
 
