5-4-2025 new 15 calculators added

--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -835,6 +835,7 @@
 <a href="determinationofcritical.html" class="calculator-btn">Critical Pressure Calculator (API RP520)</a>
 <a href="chemicalexposureburnrate.html" class="calculator-btn">Chemical Exposure Burn Severity Rate Calculator</a>
 <a href="compressibleflowcalculatorcraneequation.html" class="calculator-btn">Compressible Flow Calculator (Crane Equation 3-20)</a>
+<a href="compositerisk.html" class="calculator-btn">Composite Risk Calculator</a>
 
 
 
@@ -1115,6 +1116,8 @@
             <a href="totalbhpcalcualtor.html" class="calculator-btn">Total Brake Horsepower (BHP) Required Calculator</a>
             <a href="turnaroundtimeformulaexternalheating.html" class="calculator-btn">Turnaround Time Formula (External Heating) Calculator</a>
             <a href="tensionfactorcalculator.html" class="calculator-btn">Tension Factor Calculator</a>
+            <a href="totalintegrateddoseatgroundlevelpuffmodel.html" class="calculator-btn">Total Integrated Dose at Ground Level Calculator (Puff Model)</a>
+
 
 
 
