7-4-2025 new 13 calculators added

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -790,6 +790,8 @@
 <a href="coolingloadtemperaturedifference.html" class="calculator-btn">Cooling Load Temperature Difference (CLTD) Calculator</a>
 <a href="disinfection.html" class="calculator-btn">Chlorine Contact Time Calculator</a>
 <a href="carmankozeny.html" class="calculator-btn">Carman-Kozen Head Loss & Friction Factor Calculator</a>
+<a href="disinfectionkinetics.html" class="calculator-btn">Chick’s Law: Microbial Disinfection Calculator</a>
+
 
 
 
@@ -848,6 +850,7 @@
              <a href="atmosphericdispersionmodeling.html" class="calculator-btn">Gaussian Air Pollutant Dispersion Calculator</a>
              <a href="gasflux.html" class="calculator-btn">Gas Flux Calculator</a>
              <a href="gasphaseanalyteconcentration.html" class="calculator-btn">Gas Phase Analyte Concentration Calculator</a>
+             <a href="gasbuoyancy.html" class="calculator-btn">Gas Buoyancy Calculator</a>
 
 
 
@@ -869,7 +872,8 @@
 <a href="heightcalculationfordrainpipeslope.html" class="calculator-btn">Height Calculation for Drain Pipe Slope</a>
 <a href="heightcalculationfordrainpipeslope.html" class="calculator-btn">Height of Soak Pit Based on Volume Calculator</a>
 <a href="horizontalsettlingvelocity.html" class="calculator-btn">Horizontal Settling Velocity (vh) Calculator</a>
-
+<a href="headlossthroughcleanfat.html" class="calculator-btn">Head Loss through Clean Flat Bar Screens Calculator</a>
+<a href="headlossthroughfinescreen.html" class="calculator-btn">Head Loss through Fine Screens Calculator</a>
 
 
 
@@ -883,6 +887,8 @@
 
             <a href="todeterminekinematicviscocityoffluid.html" class="calculator-btn">Kinematic Viscosity Calculator</a>
             <a href="kilin.html" class="calculator-btn">Kiln Residence Time Calculator</a>
+            <a href="kirschmersequation.html" class="calculator-btn">Kirschmer’s Head Loss (h) Calculator</a>
+
 
             <a href="logmeantemperaturedifference.html" class="calculator-btn">Log Mean Temperature Difference (LMTD) Calculator</a>
             <a href="flowratevspressureloss.html" class="calculator-btn">Liquid Flow Rate vs. Pressure Drop Calculator</a>
@@ -892,6 +898,9 @@
 <a href="hrt.html" class="calculator-btn">Loading Rate Hydraulic Retention Time (HRT) Calculator</a>
 
 <a href="specificsubstrateutlization.html" class="calculator-btn">Loading Rate Specific Substrate Utilization Rate Calculator</a>
+  <a href="lapserate.html" class="calculator-btn">Lapse Rate Calculator</a>
+           
+
 
 
             <a href="massflowratefromvelocity.html" class="calculator-btn">Mass Flow Rate From Velocity Calculator</a>
@@ -1072,6 +1081,8 @@
 
 <a href="ultrafiltration.html" class="calculator-btn">Waterflux Ultrafiltration calculator</a>
 <a href="windprofile.html" class="calculator-btn">Wind Profile Calculator</a>
+<a href="standarddesignparticle.html" class="calculator-btn">Weir Flow Rate (Q) Calculator</a>
+
 
 
 
@@ -1088,6 +1099,7 @@
            
 
 	
+
 
 
 
