--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -799,6 +799,8 @@
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
             <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
             <a href="diabetesriskcalculator.html" class="calculator-btn">Diabetes Risk Calculator – Estimate Your 7.5-Year Risk</a>
+            <a href="depressionscreeningbyphqcalculator.html" class="calculator-btn">Depression Screening by PHQ-2 Calculator</a>
+
 
 
             <a href="epworthsleepinessscale.html" class="calculator-btn">Epworth Sleepiness Scale (ESS) Calculator</a>
@@ -816,9 +818,13 @@
             <a href="healthyweightcalcualtor.html" class="calculator-btn">Healthy Weight Calculator</a>
             <a href="heavinessofsmokingindex.html" class="calculator-btn">Heaviness of Smoking Index (HSI) Calculator</a>
             <a href="handarmcalculator.html" class="calculator-btn">Hand-Arm Vibration Exposure (HAV) Calculator-A(8) Value</a> 
+            <a href="happinesscalculator.html" class="calculator-btn">Happiness Calculator</a> 
+
 
 
             <a href="idealweightcalcualtor.html" class="calculator-btn">Ideal Weight Calculator</a>
+            <a href="injuryseverityscorecalculator.html" class="calculator-btn">Injury Severity Score (ISS) Calculator</a>
+
             <a href="karvonenformulacalculator.html" class="calculator-btn">Karvonen Formula Calculator</a>
             <a href="kidneyriskcalcualtor.html" class="calculator-btn">Kidney Failure Risk Calculator</a>
             <a href="kidneystonecalculator.html" class="calculator-btn">Kidney STONE Calculator for Percutaneous Nephrolithotomy</a>
@@ -846,6 +852,8 @@
 
 
             <a href="sleepcalculator.html" class="calculator-btn">Sleep Calculator</a>
+            <!-- <a href="shockindexcalculator.html" class="calculator-btn">Shock Index (SI) Calculator</a> -->
+
 
 
 
