--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -772,6 +772,7 @@
             <a href="costofmaking.html" class="calculator-btn">Cost of Making (CM) Calculator </a>
             <a href="correctiveactioneffectivenesscal.html" class="calculator-btn">Corrective Action Effectiveness (CAE) Calculator</a>
             <a href="criticalnumberofsamples.html" class="calculator-btn">Critical Number of Samples Calculator</a>
+            <a href="controlscore.html" class="calculator-btn">Control Score Calculator</a>
             
 
 
