--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -899,6 +899,10 @@
             <a href="horizentalstresscalcualtor.html" class="calculator-btn">Horizontal Stress Calculator (Breckels and van Eekelen Model)</a>
             <a href="hazardratecalculator.html" class="calculator-btn">Hazard Reporting Rate Calculator</a>
             <a href="hazardquotient.html" class="calculator-btn">Hazard Quotient (HQ) Calculator – Chemical Exposure Risk</a>
+          
+             <a href="hazardscore.html" class="calculator-btn">Hazard Score Calculator</a>
+          
+
 
 
 
@@ -1037,6 +1041,8 @@
 <a href="recommendedweightlimit.html" class="calculator-btn">Recommended Weight Limit (RWL) Calculator</a>
 <a href="riskmatrixcalcualtor.html" class="calculator-btn">Risk Matrix Calculator</a>
 <a href="reelandpaddle.html" class="calculator-btn">Reel and Paddle Power Calculator</a>
+
+ <a href="riskindex.html" class="calculator-btn">Risk Index Calculator</a>
 
 
 
